[package]
name = "cli"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
burn = { version = "0.13.2", features = ["train", "wgpu", "vision"] }
core = { path = "../core" }
ratatui = "0.28.0"
crossterm = "0.28.1"
tokio = { version = "1.0", features = ["full"] }
